--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "slick-carousel": "^1.8.1",
+    "typed.js": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
